# ansible-smallstep-ca

./: AGENTS.md  CHANGELOG.md  Makefile  README.md  galaxy.yml  pyproject.toml  site.yaml
.github/workflows/: release.yml  validate.yml
host_vars/: matchbox.lab.internal.yaml
inventory/: hosts
roles/smallstep_ca/: README.md
roles/smallstep_ca/defaults/: main.yml
roles/smallstep_ca/handlers/: main.yml
roles/smallstep_ca/meta/: main.yml
roles/smallstep_ca/molecule/default/: Dockerfile.j2  converge.yml  molecule.yml
roles/smallstep_ca/molecule/default/tests/: test_default.py
roles/smallstep_ca/tasks/: main.yml
roles/smallstep_ca/templates/: smallstep-ca.container.j2
roles/smallstep_cli/defaults/: main.yml
roles/smallstep_cli/meta/: main.yaml
roles/smallstep_cli/molecule/default/: Dockerfile.j2  cleanup.yml  converge.yml  molecule.yml  prepare.yml
roles/smallstep_cli/molecule/default/tests/: test_default.py
roles/smallstep_cli/tasks/: main.yml
roles/smallstep_cli/templates/: smallstep-cli-cleanup.container.j2  smallstep-cli-cleanup.timer.j2  smallstep-cli-init.container.j2  smallstep-cli-reload.path.j2  smallstep-cli-reload.service.j2  smallstep-cli-renew.container.j2
